--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=projetoZero
+
+#Configurações do banco de dados
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=${DATABASE_DRIVER}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+DB_CLOSE_DELAY=-1
+DB_CLOSE_ON_EXIT=FALSE
+
+#Configurações do JPA // HIBERNATE
+spring.h2.console.enabled=true
+SPRING.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
