Feat: Altera o tipo de salvamento do banco H2, de memória para salvamento em arquivo local, mantendo a "persistencia dos dados"

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=jdbc:h2:mem:projetoZero
+DATABASE_URL=jdbc:h2:file:./data/projetoZeroDB
 DATABASE_DRIVER=org.h2.Driver
 DATABASE_USERNAME=jamal
 DATABASE_PASSWORD=fiatsiena
