--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 DB_CLOSE_DELAY=-1
 DB_CLOSE_ON_EXIT=FALSE
+AUTO_SERVER=TRUE
 
 #Configurações do JPA // HIBERNATE
 spring.h2.console.enabled=true
