--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ AUTO_SERVER=TRUE
 spring.h2.console.enabled=true
 SPRING.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Configurações do flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
